# Project-Atlas

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
apps/atlas_demo/: CMakeLists.txt  main.cpp
atlas_common/: CMakeLists.txt
atlas_common/include/atlas_common/: hello.hpp
atlas_common/src/: hello.cpp
tests/: CMakeLists.txt
tests/atlas_common/: CMakeLists.txt  hello_test.cpp
