cmake_minimum_required(VERSION 3.20)

project(
    Atlas
    VERSION 0.1.0
    DESCRIPTION "GPU Accelerated Autonomous Indoor Robot"
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(atlas_common)
add_subdirectory(apps/atlas_demo)